--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Local files to ignore
 test.py
+jingyu.py
+remove_text.py
+create_buttons.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
